# clessn-blend

./: .gitignore  .gitmodules  README.md  file.html  main.R  main.py  txttocsv.bat
Doc/: Agora+Pipelines.drawio  DataManagementPlan.Rmd  DataManagementPlan.html  Déméter-3-3.drawio  PlanGestionDonnees.Rmd  QuorumMetadataDeputes.txt  QuorumMetadataJournalists.txt
Pipelines/: README.md
agoraplus-pressrelease/: agoraplus-pressrelease.R
agoraplus-quebec/: journaux-debats-12-1.html
archive/: main.py
archive/pipelines/loaders/l_qc125/: Dockerfile  celeryconfig.py  pyproject.toml
automation/: crontab  crontab.new  e_eu_parliament_plenary.sh  e_pressreleases_qc.sh  e_qc125.sh  e_radar+.sh  eu_parliament_plenary.sh  l_pressreleases_qc.sh  parliament-debates-quebec.sh  parliament-mash_canada-hansards.sh  parliament_mash.sh  pressconference_crush.sh  pressreleases_plow.sh  radar+.sh  test.sh  tweets_and_friends.sh  twitter_blender.sh
doc/: DataManagementPlan.Rmd  DataManagementPlan.html
pipelines/: EU_PARLIAMENT_PLENARY.md
t_agoraplus-pressreleases-qc/: README.md
tweets-collector/: all-persons-tweets-collector.R  gettingMPTweets.R
twitter-blender/: tweets-and-friends.R  twitter-blender.R
utils/: agora+_fix_debates.R  agora+_get_journalists.R  build_df_tweets.R  ca_get_debates_hub2_interventions.R  ca_get_parliament_debates.R  check_tweets_per_user.R  convert_camille_thesis_files.R  del_canada_parliament_debates.R  del_europe_parliament_debates.R  dicoto.R  dim_push_countries.R  eu_countries_translate_words.R  eu_new_get_debates_lake_items.R  get_eu_mps_hub2.R  (+15 more)
(+350 files in other folders)
