[tool.poetry]
name = "retl"
version = "0.1.0"
description = ""
authors = ["Olivier Banville <oli.banville@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
CherryPy = "^18.6.1"
celery = {extras = ["redis"], version = "^5.2.7"}

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
black = "^22.3.0"
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
